--- a/showcase/public/assets/styles/@hashicorp/design-system-components.css
+++ b/showcase/public/assets/styles/@hashicorp/design-system-components.css
@@ -293,8 +293,6 @@
   --token-breadcrumb-link-foreground-color-hover: #3b3d45;
   --token-breadcrumb-link-foreground-color-active: #3b3d45;
   --token-breadcrumb-truncation-content-box-shadow: 0 0 0 1px #656a7640, 0px 2px 3px 0px #656a7626, 0px 16px 16px -10px #656a7633;
-  --token-breadcrumb-truncation-content-foreground-color-default: #656a76;
-  --token-breadcrumb-truncation-content-foreground-color-hover: #3b3d45;
   --token-breadcrumb-truncation-toggle-foreground-color-default: #656a76;
   --token-breadcrumb-truncation-toggle-foreground-color-hover: #656a76;
   --token-breadcrumb-truncation-toggle-foreground-color-active: #3b3d45;
@@ -3444,10 +3442,10 @@
 }
 .hds-breadcrumb__truncation-content .hds-breadcrumb__link {
   width: 100%;
-  color: var(--token-breadcrumb-truncation-content-foreground-color-default);
+  color: var(--token-color-foreground-faint);
 }
 .hds-breadcrumb__truncation-content .hds-breadcrumb__link:hover, .hds-breadcrumb__truncation-content .hds-breadcrumb__link.mock-hover {
-  color: var(--token-breadcrumb-truncation-content-foreground-color-hover);
+  color: var(--token-color-foreground-primary);
 }
 .hds-mode-cds-g0 .hds-breadcrumb__truncation-content .hds-breadcrumb__link,
 .hds-mode-cds-g10 .hds-breadcrumb__truncation-content .hds-breadcrumb__link,
